--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <!-- 文件拷贝时的编码 -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <!-- 编译时的编码 -->
+    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     <!-- spring版本号 -->
     <spring.version>4.1.7.RELEASE</spring.version>
     <!-- mybatis版本号 -->
