--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,11 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+      <version>4.10</version>
+      <!--<scope>test</scope> -->
+  </dependency>
 
-    <!-- 1.日志 -->
+  <!-- 1.日志 -->
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
@@ -80,24 +80,18 @@
       <artifactId>mybatis-spring</artifactId>
       <version>1.2.2</version>
     </dependency>
-
-    <!-- 导入java ee jar 包 -->
-    <!--
-    <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
-      <version>7.0</version>
-    </dependency>
-    -->
-
     <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
-    <!--
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <version>1.2.2</version>
     </dependency>
-    -->
+    <!-- 导入java ee jar 包 -->
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
+    </dependency>
 
     <!-- 3.Servlet web -->
     <!-- JSTL标签类 -->
@@ -106,16 +100,16 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.7.4</version>
+    </dependency>
     <!--
     <dependency>
       <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
       <version>1.1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.5.4</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -220,7 +214,6 @@
     </dependency>
     -->
     <!-- 上传组件包 -->
-    <!--
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
@@ -236,7 +229,6 @@
       <artifactId>commons-codec</artifactId>
       <version>1.9</version>
     </dependency>
-    -->
 
     <!-- Map工具类 -->
     <!--
@@ -248,6 +240,17 @@
     -->
   </dependencies>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
     <finalName>cc_bi</finalName>
   </build>
 </project>
